--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@antv/x6": "^2.16.1",
     "core-js": "^3.8.3",
+    "dagre": "^0.8.5",
     "echarts": "^5.4.3",
     "element-ui": "^2.15.12",
     "vue": "^2.6.14",
